# pr4test

./: CMakeLists.txt  clientmain  clientmain.c  servermain  servermain.c  shm_channel.c  shm_channel.h
